# SWE1_AnimalGame

./: README.md  pyproject.toml
src/AnimalGame/: __init__.py  __main__.py  config.toml  gamestructure.py
src/AnimalGame/farm/: animals.py
src/AnimalGame/wild/: animals.py
tests/: test_gamelogic.py
