[project]
name = "AnimalGame"
version = "0.1.0"
description = ""
authors = [
    {name = "chris",email = "s2010438013@fhooe.at"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typeguard>=4.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
]

# Config for the build system
[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
AnimalGame = ["*.toml"]

[tool.setuptools.packages.find]
where = ["./src"]

# Configure additional tools
# Pytest
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--import-mode=importlib",
]
testpaths = ["tests"]